--- a/nuxeo-dynamic-asset-transformation-webui/src/main/resources/web/nuxeo.war/ui/nuxeo-asset-transformation/actions/nuxeo-asset-transformation-action.html
+++ b/nuxeo-dynamic-asset-transformation-webui/src/main/resources/web/nuxeo.war/ui/nuxeo-asset-transformation/actions/nuxeo-asset-transformation-action.html
@@ -27,6 +27,10 @@
                 width:100%;
             }
 
+            h3 {
+                background-color: #ddd;
+            }
+
             .buttons {
                 margin-top: 0px;
             }
@@ -44,10 +48,7 @@
 
             .params {
                 overflow:auto;
-            }
-
-            #form {
-                margin-right:64px;
+                padding-right:24px;
             }
 
             nuxeo-dialog {
@@ -68,7 +69,7 @@
             }
 
             *[role='widget'] {
-                margin-bottom: 0px;
+                margin-bottom: 8px;
             }
 
             .cdnLink {
