Remove useless quotes

--- a/nuxeo-dynamic-asset-transformation-webui/src/main/resources/web/nuxeo.war/ui/nuxeo-asset-transformation/actions/nuxeo-asset-transformation-action.html
+++ b/nuxeo-dynamic-asset-transformation-webui/src/main/resources/web/nuxeo.war/ui/nuxeo-asset-transformation/actions/nuxeo-asset-transformation-action.html
@@ -105,7 +105,7 @@
                             <form>
                                 <h3 class="firstTitle">Crop Box</h3>
                                 <div role="widget">
-                                    <label>"[[i18n('label.action.transform.ratio')]]"</label>
+                                    <label>[[i18n('label.action.transform.ratio')]]</label>
                                     <nuxeo-select role="widget"
                                                   name="format"
                                                   placeholder="[[i18n('label.action.transform.ratio')]]"
