--- a/nuxeo-dynamic-asset-transformation-webui/src/main/resources/web/nuxeo.war/ui/nuxeo-asset-transformation/actions/nuxeo-asset-transformation-action.html
+++ b/nuxeo-dynamic-asset-transformation-webui/src/main/resources/web/nuxeo.war/ui/nuxeo-asset-transformation/actions/nuxeo-asset-transformation-action.html
@@ -192,36 +192,38 @@
                             </div>
                         </template>
 
-                        <h3>Save</h3>
+                        <nuxeo-filter document="[[document]]" permission="Write">
+                            <template>
+                                <h3>Save</h3>
+                                <div>
+                                    <div>
+                                        <nuxeo-input id="renditionName"
+                                                     role="widget"
+                                                     label="[[i18n('label.action.transform.rendition')]]"
+                                                     value="{{renditionName}}"
+                                                     type="text"
+                                                     required>
+                                        </nuxeo-input>
+                                        <paper-button id="saveRendition" noink class="secondary save" on-tap="_saveRendition">
+                                            [[i18n('label.dialog.button.save.rendition')]]
+                                        </paper-button>
+                                    </div>
 
-                        <div>
-                            <div>
-                                <nuxeo-input id="renditionName"
-                                             role="widget"
-                                             label="[[i18n('label.action.transform.rendition')]]"
-                                             value="{{renditionName}}"
-                                             type="text"
-                                             required>
-                                </nuxeo-input>
-                                <paper-button id="saveRendition" noink class="secondary save" on-tap="_saveRendition">
-                                    [[i18n('label.dialog.button.save.rendition')]]
-                                </paper-button>
-                            </div>
-
-                            <nuxeo-input id="derivativeName"
-                                         role="widget"
-                                         label="[[i18n('label.action.transform.derivative')]]"
-                                         value="{{derivativeName}}"
-                                         type="text"
-                                         required>
-                            </nuxeo-input>
-                            <div>
-                                <paper-button id="saveDerivative" noink class="secondary save" on-tap="_saveDerivative">
-                                    [[i18n('label.dialog.button.save.derivative')]]
-                                </paper-button>
-                            </div>
-                        </div>
-
+                                    <nuxeo-input id="derivativeName"
+                                                 role="widget"
+                                                 label="[[i18n('label.action.transform.derivative')]]"
+                                                 value="{{derivativeName}}"
+                                                 type="text"
+                                                 required>
+                                    </nuxeo-input>
+                                    <div>
+                                        <paper-button id="saveDerivative" noink class="secondary save" on-tap="_saveDerivative">
+                                            [[i18n('label.dialog.button.save.derivative')]]
+                                        </paper-button>
+                                    </div>
+                                </div>
+                            </template>
+                        </nuxeo-filter>
                     </div>
                     <div class="flex">
                         <div class="cropArea">
